# quay-adapters

./: Cargo.toml  LICENSE  README.md
fixtures/: exact_fee.json  flat.json  one_sided.json  spread_fee.json
jupiter/: Cargo.toml  README.md
jupiter/src/: lib.rs
jupiter/tests/: parity.rs
src/: lib.rs
titan/: Cargo.toml  README.md
titan/tests/: parity.rs
